# jotinha-bot

./: .env.example  .gitignore  .replit  COMANDOS.md  DEPLOY_ORACLE_CLOUD.txt  MUSICA_GUIA.md  advanced_ai.py  ai_database.db  ai_memory.json  bot.py  channel_config.json  como_trocar_foto_bot.md  daily_tasks_control.json  economy_data.json  keep_alive.py  monitor.py  pyproject.toml  replit.md  requirements.txt  setup_oracle.sh  social_data.json  start_bot.sh
attached_assets/: _1755384087333.env  bot_1755384087334.py  loja_scrapers_1755384087334.py
cogs/: admin_advanced.py  ai_brain.py  channel_config.py  fun_commands.py  moderation.py  music_voice.py  social_system.py
