[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "beautifulsoup4>=4.13.4",
    "discord-py[voice]>=2.5.2",
    "flask>=3.1.1",
    "openai>=1.108.0",
    "psutil>=7.0.0",
    "pynacl>=1.5.0",
    "python-dotenv>=1.1.1",
    "pytz>=2025.2",
    "requests>=2.32.4",
    "trafilatura>=2.0.0",
    "wavelink>=3.4.1",
    "yt-dlp>=2025.8.11",
]
